latex-to-leaflet/tests/snapshots/integration__rich_document_snapshot.snap
---
source: latex/tests/integration.rs
assertion_line: 37
expression: json
---
{
  "$type": "site.standard.document",
  "content": {
    "$type": "pub.leaflet.content",
    "pages": [
      {
        "$type": "pub.leaflet.pages.linearDocument",
        "blocks": [
          {
            "$type": "pub.leaflet.pages.linearDocument#block",
            "block": {
              "$type": "pub.leaflet.blocks.header",
              "level": 2,
              "plaintext": "Intro"
            }
          },
          {
            "$type": "pub.leaflet.pages.linearDocument#block",
            "block": {
              "$type": "pub.leaflet.blocks.text",
              "plaintext": "Some \\textbf{bold} and \\textit{italic} text with"
            }
          },
          {
            "$type": "pub.leaflet.pages.linearDocument#block",
            "block": {
              "$type": "pub.leaflet.blocks.math",
              "tex": "x^2"
            }
          },
          {
            "$type": "pub.leaflet.pages.linearDocument#block",
            "block": {
              "$type": "pub.leaflet.blocks.text",
              "plaintext": "math."
            }
          },
          {
            "$type": "pub.leaflet.pages.linearDocument#block",
            "block": {
              "$type": "pub.leaflet.blocks.unorderedList",
              "children": [
                {
                  "$type": "pub.leaflet.blocks.unorderedList#listItem",
                  "content": {
                    "$type": "pub.leaflet.pages.linearDocument#block",
                    "block": {
                      "$type": "pub.leaflet.blocks.text",
                      "plaintext": "First item"
                    }
                  }
                },
                {
                  "$type": "pub.leaflet.blocks.unorderedList#listItem",
                  "content": {
                    "$type": "pub.leaflet.pages.linearDocument#block",
                    "block": {
                      "$type": "pub.leaflet.blocks.text",
                      "plaintext": "Second item"
                    }
                  }
                }
              ]
            }
          },
          {
            "$type": "pub.leaflet.pages.linearDocument#block",
            "block": {
              "$type": "pub.leaflet.blocks.blockquote",
              "plaintext": "$A = B$."
            }
          }
        ],
        "id": "page:0"
      }
    ]
  },
  "title": "Rich Doc"
}
